--- a/core/pom.xml
+++ b/core/pom.xml
@@ -118,7 +118,8 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
         </dependency>
- 
+
+        <!--一致性-->
         <!-- JRaft dependency start -->
         <dependency>
             <groupId>com.alipay.sofa</groupId>
